--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>HemiliaFrontend</title>
+  <title>HEMILIA</title>
   <base href="/">
+  <!-- <base href="/sash/preview/"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./assets/images/brand/favicon.ico">
+
+  <!-- BOOTSTRAP CSS -->
+  <link id="style" href="./assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 </head>
-<body>
-  <app-root></app-root>
+<body class="app sidebar-mini ltr">
+<app-root></app-root>
 </body>
 </html>
