--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>HEMILIA</title>
+  <title>AIGO</title>
   <base href="/">
   <!-- <base href="/sash/preview/"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
