--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AIGO</title>
+  <title>JATUN AYLLU</title>
   <base href="/">
   <!-- <base href="/sash/preview/"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="./assets/images/brand/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://cdn.discordapp.com/attachments/733805519617130506/1178127139413958666/Logo_JatunAyllu2.png?ex=65750366&is=65628e66&hm=9ef601f81b6e4359ff877ce3f1a55620af1b0c5785e58f67c266ce8c490e7ac9&">
 
   <!-- BOOTSTRAP CSS -->
-  <link id="style" href="./assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+  <!-- <link id="style" type="text/css" rel="stylesheet"  href="src/assets/plugins/bootstrap/css/bootstrap.min.css"/> -->
+  <link id="style" rel="stylesheet" type="css" href="plugins/bootstrap/css/bootstrap.min.css"/>
 </head>
 <body class="app sidebar-mini ltr">
 <app-root></app-root>
